--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,22 @@
-# ----------------------------
-# Fichiers système
-# ----------------------------
-.DS_Store
-Thumbs.db
-
-# ----------------------------
-# Logs et fichiers temporaires
-# ----------------------------
-*.log
-*.tmp
-*.swp
-
-# ----------------------------
-# Visual Studio / .NET
-# ----------------------------
-# Build directories
-bin/
-obj/
-*.exe
-*.dll
-*.pdb
-
-# IDE
-.vs/
-*.user
-*.suo
-*.userosscache
-*.sln.docstates
-
-# NuGet packages
-*.nupkg
-packages/
-
-# Environnements / secrets
-*.env
-appsettings.Local.json
-
-# ----------------------------
-# Node.js / Front-end
-# ----------------------------
-node_modules/
-dist/
-build/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-
-# ----------------------------
-# Front-end caches
-# ----------------------------
-*.cache
-*.parcel-cache
+### AL ###
+#Template for AL projects for Dynamics 365 Business Central
+#launch.json folder
+.vscode/
+#Cache folder
+.alcache/
+#Symbols folder
+.alpackages/
+#Snapshots folder
+.snapshots/
+#Testing Output folder
+.output/
+#Extension App-file
+*.app
+#Rapid Application Development File
+rad.json
+#Translation Base-file
+*.g.xlf
+#License-file
+*.flf
+#Test results file
+TestResults.xml
